--- a/style.css
+++ b/style.css
@@ -1,38 +1,30 @@
 .game
 {
-    background: rgb(63, 126, 105);
+    background: rgba(1, 104, 53, 0.966);
     width: 100%;
     height: 100vh;
     border: 1px solid  red;
     margin: 0 auto; 
     border: solid 10px;
-    text-align:center;
-    min-height:430px;
+    text-align: center;
 }
 
 h1 {
-    padding: 20px;
+    display: inline-block;
+    padding: 10px;
     background:black;
     color:white;
     width: 320px;;
-    height: 50px;
+    margin: 10px auto;
 }
 
-.board
-{
-padding: 20px;
+.board {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
-
-.status {
-    display: inline-block;
-    background: gold;
-    border: solid 5px white;
-    border-radius: 10px;
-    padding: 5px 20px;
-    margin: 0 auto;
-    margin-top: 10px;
-}
 
 .deck {
     float:left;
@@ -43,40 +35,59 @@ padding: 20px;
     border: double 5px;
 }
 
-.game .players{
-    width: 500px;
-    margin: 0 auto;
-    margin-top: 20px;
+.status {
     text-align: center;
+    background: gold;
+    border: solid 5px white;
+    border-radius: 10px;
+    height: 30px;
+    width: 100px;
 }
 
-.game .dealer{
-    width: 40%;
-    border: 2px solid #f5f5f5;
-    border-radius: 10px;
-    padding: 10px;
-    display: inline-block;
-    margin:1%;
-    vertical-align: top;
-    background:#f5f5f5;
+.players {
+    display: flex;
+    justify-content: center;
+}
+
+h3 {
+    text-align: center;
+    color: yellowgreen;
+    background: red;
+    height: 20px;
+    width: 100px;
+    border: 1px solid whitesmoke;
+    border-radius: 5px;
+}
+
+.player, .dealer {
+    display: flex;
+    border: 3px solid yellowgreen;
+    width: 500px;
+    height: 500px;
+    justify-content: center;
+    margin: 0px 20px;
 }
 
 .gameOptions {
-    text-align:center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    width: 720px;
+    height: 100px;
+    align-items: center;
 }
 
-.btn{
-    border:none;
-    padding:10px;
-    border-radius:10px;
+.btn {
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
     background:#222;
     color:white !important;
     cursor:pointer;
-    top: 80%;
-    left: 50%;
-    transform: translate(-80%, -50%);
+    font-size: 20px;
+    width: 100px;
 }
 
 .btn:hover{
-    background:dodgerblue;
+    background:red;
 }
