--- a/style.css
+++ b/style.css
@@ -25,6 +25,15 @@ h1 {
     align-items: center;
 }
 
+.status {
+    text-align: center;
+    background: gold;
+    border: solid 5px white;
+    border-radius: 10px;
+    height: 50px;
+    width: 200px;
+    margin-bottom: 20px;
+}
 
 .deck {
     float:left;
@@ -33,15 +42,12 @@ h1 {
     padding: 10px;
     border-radius:10px;
     border: double 5px;
-}
-
-.status {
-    text-align: center;
-    background: gold;
-    border: solid 5px white;
-    border-radius: 10px;
-    height: 30px;
-    width: 100px;
+    color: tomato;
+    width: 75px;
+    height: 100px;
+    font-size: 30px;
+    align-content: center;
+    margin-bottom: 20px;
 }
 
 .players {
