--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-.game
-{
+.gameContainer {
     background: rgba(1, 104, 53, 0.966);
     width: 100%;
     height: 100vh;
@@ -15,10 +14,10 @@ h1 {
     background:black;
     color:white;
     width: 320px;;
-    margin: 10px auto;
+    margin: 20px auto;
 }
 
-.board {
+.gameBoard {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,54 +25,69 @@ h1 {
 }
 
 .status {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    background: gold;
-    border: solid 5px white;
+    background: none;
+    border: solid 5px whitesmoke;
     border-radius: 10px;
     height: 50px;
     width: 250px;
     margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+    color: tomato;
 }
 
 .deck {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: white;
-    color:#222;
+    background: steelblue;
     padding: 10px;
     border-radius:10px;
     border: double 5px;
     color: tomato;
-    width: 75px;
-    height: 100px;
+    width: 50px;
+    height: 80px;
     font-size: 30px;
     align-content: center;
-    margin-bottom: 20px;
+    margin: 20px;
 }
 
+#deckcount {
+    color: lightgoldenrodyellow;
+    font-size: 30pt;
+    font-weight: bold;
+}
 .players {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 
-h3 {
+h2 {
     text-align: center;
-    color: yellowgreen;
-    background: red;
-    height: 20px;
-    width: 100px;
+    color: goldenrod;
+    background: black;
+    height: 50px;
+    width: 200px;
     border: 1px solid whitesmoke;
     border-radius: 5px;
 }
 
 .player, .dealer {
     display: flex;
-    border: 3px solid yellowgreen;
-    width: 500px;
-    height: 500px;
+    border: yellowgreen;
+    width: 480px;
+    height: 320px;
     justify-content: center;
+    align-items: center;
     margin: 0px 20px;
+    color: lightgoldenrodyellow;
+    font-size: 30px;
+    font-weight: bolder;
 }
 
 .gameOptions {
@@ -99,3 +113,69 @@ h3 {
 .btn:hover{
     background:red;
 }
+
+.points{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    text-align: center;
+    font-size: 50pt;
+    font-weight: bold;
+    margin: 10px;
+    color: yellow;
+}
+
+.card{
+    width: 50px;
+    height: 80px;
+    padding: 10px;
+    border: solid 1px #808080;
+    background-color: steelblue;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 20pt;
+    text-align: center;
+    margin: 3px;
+    border:3px solid tomato;
+}
+
+.active{
+    border: solid 5px yellowgreen;
+}
+
+.rules {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.rulesContent {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
